# CohortLint

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
case_studies/gse171524/: README.md  analyze.py
case_studies/gse171524/results/: analysis_summary.html  cell_type_proportions.csv  cohortlint.yaml  cohortlint_report.html  cohortlint_report.json  discovery_metadata.csv  exploratory_de_top250.tsv  marker_gene_summary.csv  sample_qc.csv  validation_metadata.csv
docs/: dependencies.md  rules.md
notebooks/: public_multicohort_demo.ipynb
packaging/: README.md  windows_entry.py
packaging/windows/: KULLANIM.txt  Test-Et.cmd  cohortlint.example.yaml
packaging/windows/demo/: cohort_a.csv  cohort_b.csv  cohortlint.yaml
src/cohortlint/: __init__.py  __main__.py  cli.py  config.py  harmonize.py  i18n.py  loader.py  model.py  registry.py
src/cohortlint/locales/: __init__.py  de.yaml  en.yaml  tr.yaml
src/cohortlint/report/: html.py  json.py  terminal.py
src/cohortlint/report/templates/: __init__.py  report.html.j2
src/cohortlint/rules/: __init__.py  completeness.py  design.py  privacy.py  structural.py  units.py  vocabulary.py
tests/: test_cli_m2.py  test_cli_release.py  test_config_loader.py  test_foundation.py  test_harmonize.py  test_report_html.py  test_rules_completeness.py  test_rules_design.py  test_rules_privacy.py  test_rules_structural.py  test_rules_units.py
tests/fixtures/synthetic/: __init__.py  generate.py
tools/: generate_rules.py
