[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cohortlint"
version = "0.1.0"
description = "Pre-integration metadata diagnostics for multi-cohort omics studies"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "CohortLint contributors" }]
keywords = ["bioinformatics", "metadata", "omics", "quality-control"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "jinja2>=3.1",
  "numpy>=1.26,<2.4",
  "openpyxl>=3.1",
  "pandas>=2.1",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/Aristotheles/CohortLint"
Repository = "https://github.com/Aristotheles/CohortLint"
Issues = "https://github.com/Aristotheles/CohortLint/issues"

[project.optional-dependencies]
anndata = ["anndata>=0.10"]
ontology = ["text2term>=4.1"]
case-study = ["matplotlib>=3.8"]
dev = [
  "bandit>=1.7",
  "build>=1.2",
  "hypothesis>=6.90",
  "mypy>=1.8",
  "pandas-stubs>=2.1",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=5.1",
  "types-PyYAML>=6.0",
]

[project.scripts]
cohortlint = "cohortlint.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cohortlint"]

[tool.hatch.build.targets.sdist]
include = [
  "src/cohortlint",
  "tests",
  "docs",
  "case_studies",
  "README.md",
  "SECURITY.md",
  "LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cohortlint"]

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
